# Template-GCP-Cloud-Function-Python-FastAPI

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_slug }}/: .python-version  Dockerfile  README.md  commands.sh  main.py  pyproject.toml
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_slug }}/: app.py
