[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = "{{ cookiecutter.authors }}"
readme = "README.md"
packages = [{ include = "{{ cookiecutter.package_slug }}" }]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version_poetry}}"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
